# AILooM

./: .gitignore  .pip-audit-ignore.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
prd/: adr_companion.md  framework_agnostic_ai_memory_layer_prd_final.md  system_design_spec.md
scripts/: entrypoint.sh
src/memory_layer/: __init__.py
src/memory_layer/adapters/: __init__.py
src/memory_layer/adapters/langgraph/: __init__.py  recall_node.py  write_node.py
src/memory_layer/adapters/mcp/: __init__.py  server.py
src/memory_layer/adapters/postgres/: __init__.py  audit_repo.py  connection.py  fact_repo.py  migrator.py  record_repo.py  trace_repo.py  vector_index.py
src/memory_layer/adapters/postgres/migrations/: __init__.py  env.py
src/memory_layer/adapters/postgres/migrations/versions/: 0001_initial.py
src/memory_layer/adapters/qdrant/: __init__.py  vector_index.py
src/memory_layer/adapters/rest/: __init__.py  app.py
src/memory_layer/adapters/sdk/: __init__.py  client.py
src/memory_layer/api/: __init__.py  app.py  errors.py  health.py  middleware.py  schemas.py  tenant.py
src/memory_layer/config/: __init__.py  loader.py  settings.py
src/memory_layer/domain/: __init__.py  events.py  exceptions.py  policies.py  records.py  types.py
src/memory_layer/engine/: __init__.py  consolidation.py  contradiction.py  decay.py  explain.py  extraction.py  ingestion.py  planner.py  recall.py  retrieval.py  scheduler.py  session.py
src/memory_layer/integrations/: __init__.py  langgraph.py  state_models.py
src/memory_layer/mcp/: __init__.py  server.py
src/memory_layer/observability/: __init__.py  audit.py  emitter.py  logging.py  metrics.py  tracing.py
src/memory_layer/policy/: __init__.py  consolidation.py  decay.py  scheduler.py
src/memory_layer/ports/: __init__.py  inbound.py  outbound.py
src/memory_layer/sdk/: __init__.py  client.py  errors.py  models.py
src/memory_layer/storage/: __init__.py  container.py
src/memory_layer/storage/sqlite/: __init__.py  audit_repo.py  fact_repo.py  migration_runner.py  policy_repo.py  record_repo.py
src/memory_layer/storage/sqlite/migrations/: V1__initial_schema.sql  V2__drop_facts_memory_record_fk.sql
src/memory_layer/storage/vector/: __init__.py  local_vector.py
tasks/: M0-T1.md  M0-T2.md  M0-T3.md  M1-T1.md  M1-T2.md  M1-T3.md  M1-T4.md  M1-T5.md  M2-T1.md  M2-T2.md  M2-T3.md  M2-T4.md  M2-T5.md  M2-T6.md  M3-T1.md  M3-T2.md  M3-T3.md  M3-T4.md  M3-T5.md  M4-T1.md  M4-T2.md  M4-T3.md  M4-T4.md  M4-T5.md  M5-T1.md  M5-T2.md  M5-T3.md  M5-T4.md  M5-T5.md  M6-T1.md  M6-T2.md  M6-T3.md  M6-T4.md  M6-T5.md  M7-T1.md  M7-T2.md  M7-T3.md  M7-T4.md  M7-T5.md
tests/: __init__.py
tests/adapters/: __init__.py
tests/adapters/postgres/: __init__.py  test_audit_repo.py  test_fact_repo.py  test_migrator.py  test_record_repo.py  test_trace_repo.py  test_vector_index.py
tests/adapters/qdrant/: __init__.py  test_vector_index.py
tests/api/: test_app.py  test_health.py  test_tenant_middleware.py
tests/benchmarks/: __init__.py  test_recall_quality.py
tests/config/: __init__.py  test_settings.py
tests/domain/: __init__.py  test_core_objects.py  test_events.py  test_policies.py  test_ports.py  test_records.py  test_types.py
tests/engine/: __init__.py  test_consolidation.py  test_decay.py  test_explain.py  test_extraction.py  test_ingestion.py  test_planner.py  test_recall.py  test_retrieval.py  test_scheduler.py  test_session.py
tests/integrations/: test_langgraph.py
tests/mcp/: test_server.py
tests/observability/: __init__.py  test_logging.py  test_metrics.py  test_tracing.py
tests/packaging/: __init__.py  test_packaging.py
tests/sdk/: test_client.py
tests/storage/: __init__.py  test_audit_repo.py  test_container.py  test_fact_repo.py  test_migration_runner.py  test_policy_repo.py  test_record_repo.py  test_vector_index.py
