[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-layer"
version = "0.1.0"
description = "A framework-agnostic AI memory layer for production agentic systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "chromadb>=0.5.0",
    "pgvector>=0.3.0",
    "qdrant-client>=1.9.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "prometheus-client>=0.20.0",
    "python-json-logger>=2.0.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-json-report>=1.5.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
    "pip-audit>=2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_layer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services (TEST_POSTGRES_DSN, TEST_QDRANT_URL)",
    "benchmark: LongMemEval-style recall quality benchmarks",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.coverage.run]
source = ["src/memory_layer"]
omit = ["*/migrations/*", "*/versions/*"]

[tool.coverage.report]
fail_under = 90
