[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-layer"
version = "0.1.0"
description = "Framework-agnostic AI memory layer for production agentic systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2",
    "sqlalchemy>=2",
    "chromadb>=0.5",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
    "psycopg[binary]>=3",
]
langgraph = [
    "langgraph>=0.2",
]
mcp = [
    "mcp>=1.0",
]
graph = [
    "neo4j>=5",
    "kuzu>=0.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
memory-layer = "memory_layer.adapters.rest.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_layer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "integration: requires external services (TEST_POSTGRES_DSN, TEST_QDRANT_URL)",
    "benchmark: LongMemEval-style recall quality benchmarks",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["memory_layer"]
src = ["src"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.11"

[tool.coverage.run]
source = ["src/memory_layer"]
omit = ["*/migrations/*", "*/versions/*"]

[tool.coverage.report]
fail_under = 80
