[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-layer"
version = "0.1.0"
description = "Framework-agnostic AI memory layer for production agentic systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2",
    # pydantic-settings is imported unconditionally by config/settings.py;
    # it must be a core dep, not optional.
    "pydantic-settings>=2",
    "sqlalchemy>=2",
    "aiosqlite>=0.20",
    # chromadb removed from core dependencies.
    # CVE-2026-45829 (ChromaToast, CVSS 9.8): pre-auth RCE in all chromadb
    # >= 1.0.0 via the Python/FastAPI server. No upstream patch available as
    # of 2026-06-19.  Moved to optional extra `chroma` so production
    # deployments that use pgvector or Qdrant are not exposed.  Re-evaluate
    # when an upstream patch is confirmed; see:
    # https://www.cve.org/CVERecord?id=CVE-2026-45829
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29",
    "psycopg[binary]>=3",
]
qdrant = [
    "qdrant-client>=1.9",
]
# CVE-2026-45829: chromadb extra is provided for local/dev use only.
# Do NOT install this extra on internet-exposed servers until a patched
# version is confirmed.  Use pgvector (`postgres` extra) or Qdrant
# (`qdrant` extra) for production vector storage instead.
chroma = [
    "chromadb>=0.5",
]
langgraph = [
    "langgraph>=0.2",
]
mcp = [
    "mcp>=1.0",
]
graph = [
    "neo4j>=5",
    "kuzu>=0.4",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx>=0.27",
    # Required for tests/mcp/test_server.py
    "mcp>=1.0",
    # Required for tests/storage/test_container.py and test_vector_index.py
    # CVE-2026-45829: dev/test use only — see chroma extra comment above.
    "chromadb>=0.5",
]

[project.scripts]
memory-layer = "memory_layer.adapters.rest.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_layer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"
markers = [
    "integration: requires external services (TEST_POSTGRES_DSN, TEST_QDRANT_URL)",
    "benchmark: LongMemEval-style recall quality benchmarks",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["memory_layer"]
detect-same-package = false

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.11"

[tool.coverage.run]
source = ["src/memory_layer"]
omit = ["*/migrations/*", "*/versions/*"]

[tool.coverage.report]
fail_under = 80
